# w3bstream

./: .gitignore  BUILD-CIRCUIT.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  Makefile  OPERATOR_GUIDE.md  QUICK_START.md  README.md  RUN-LOCALLY.md  apinode.Dockerfile  bootnode.Dockerfile  codecov.yml  coordinator.Dockerfile  docker-compose-dev.yaml  docker-compose-test.yaml  docker-compose.yaml  enode.Dockerfile  go.mod  go.sum  http_plugin.Dockerfile  node.Dockerfile  prover.Dockerfile  sequencer.Dockerfile  znode.Dockerfile
.github/: CODEOWNERS
apitypes/: apitypes.go  apitypes_test.go
block/: block.go
clients/: client.go  clients  context.go  manager.go  manager_test.go  sessions.go  sessions_test.go
coordinator/: coordinator.go  model.go
datasource/: README.md  datasource.go  postgres.go  postgres_test.go  tableland.go
docs/: ARCHITECTURE.md  BUILD-CIRCUIT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  (+10 more)
examples/halo2-circuit/: Cargo.toml  README.md
examples/halo2-circuit/contracts/: Halo2Dapp.sol  VerifierRouterTemplate.sol
examples/halo2-circuit/projectfile/: verifyonchain
examples/halo2-circuit/src/: generator.rs  lib.rs  main.rs  opts.rs
examples/halo2-circuit/src/circuits/: fibonacci.rs  function.rs  simple.rs
examples/risc0-circuit/: Cargo.toml  README.md
examples/risc0-circuit/contract/: ControlID.sol  Groth16Verifier.sol  IRiscZeroVerifier.sol  Risc0Dapp.sol  Risc0Router.sol  RiscZeroGroth16Verifier.sol  SafeCast.sol  StructHash.sol
examples/risc0-circuit/method/: Cargo.toml  README.md  build.rs
examples/risc0-circuit/method/guest/: Cargo.toml
examples/risc0-circuit/method/guest/src/: main.rs
examples/risc0-circuit/projectfile/: verifyonchain
examples/risc0-circuit/src/: main.rs  opts.rs
examples/zkwasm-circuit/: Cargo.toml  README.md
examples/zkwasm-circuit/circuit/: README.md
examples/zkwasm-circuit/circuit/src/: add.ts
examples/zkwasm-circuit/src/: lib.rs  main.rs  opts.rs
examples/zkwasm-circuit/src/prover/: verifier.rs
examples/zkwasm-circuit/src/types/: instance.rs  mod.rs  params.rs  proof.rs  vkey.rs
(+800 files in other folders)
