[package]
name = "risc0-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
range-method = { path = "method" }
risc0-zkvm = { version = "0.19.0" }
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.4.3", features = ["derive", "env", "unicode", "wrap_help"] }


[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
